Note that the leader field 000 is not a searchable field.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -190,7 +190,7 @@
           <tr><td><span class="tagexample">6*</span></td><td>any 6XX field in the record</td></tr>
           <tr><td><span class="tagexample">*</span></td><td>any field in the record</td></tr>
         </table>
-
+        <p><em>note:</em> The 000 field represents the marc record leader, and while this is displayed in results, it is not a searchable marc field.</p>
       </div>
 
       <div id="predicate_help" class="help_text" style="display: none">
@@ -505,7 +505,7 @@
 
 
     <div class="bottom_bar">
-      Questions?  Ideas?  <span class="github_link">&rarr;  <a href="https://github.com/marktriggs/marcgrep">Visit MARCgrep online</span></a>
+      Questions?  Ideas?  <span class="github_link">&rarr;  <a href="https://github.com/marktriggs/marcgrep">Visit MARCgrep online</a></span>
     </div>
 
   </body>
